syntax = "proto3";

package rpccmdservice;


import "default.proto";

service remotechange{
    rpc RemoteChange (DefaultRequestMsg) returns (DefaultResp) {}
}